# spatialRSP

./: LICENSE  README.md  pyproject.toml
data/: README.md
docs/source/: conf.py  index.rst  modules.rst  spatialrsp.core.plotting.rst  spatialrsp.core.rst  spatialrsp.rst  spatialrsp.utils.rst
spatialrsp/core/: __init__.py  angular.py  cdf.py  statistics.py
spatialrsp/core/plotting/: composite.py  embedding.py  rsp_curves.py
spatialrsp/statistics/: plotting.py
spatialrsp/utils/: __init__.py  formatting.py  geometry.py  io.py  preprocessing.py  transform.py
